syntax = "proto3";

package model;

service Transaction {
  rpc setCollectedCoin(CollectedCoinRequest) returns (CollectedCoinResponse);
  rpc setKilledMonster(KilledMonsterRequest) returns (KilledMonsterResponse);
  rpc setDeath(DeathRequest) returns (DeathResponse);
}

message CollectedCoinRequest {
  int64 user_id = 1;
  double value = 2;
}

message CollectedCoinResponse {
  int64 value_all = 1;
  int64 trophy_coin_id = 2;
  int64 trophy_coin_starting = 3;
  string trophy_coin_name = 4;
}

message KilledMonsterRequest {
  int64 user_id = 1;
  int64 monster_id = 2;
}

message KilledMonsterResponse {
  int64 value_all = 1;
  int64 trophy_id = 2;
  int64 trophy_monster_id = 3;
  int64 trophy_monster_starting = 4;
  string trophy_monster_name = 5;
}

message DeathRequest {
  int64 user_id = 1;
}

message DeathResponse {
  int64 value_all = 1;
  int64 trophy_death_id = 2;
  int64 trophy_death_starting = 3;
  string trophy_death_name = 4;
}
